# langchain-academy

./: .env.example  .gitignore  .gitmodules  Ambient Agents.md  CLAUDE.md  LangGraph-Command-vs-Send.md  README.md  README.md.bak  TAG_NORMALIZATION_REPORT.md  broken links output.md  download_file.py  mkdocs.yml  pyproject.toml  pyrightconfig.json  quartz.config.ts  quartz.layout.ts
.claude/: CLAUDE.md  DOCUMENT_LINK_ANALYSIS_REPORT.md  DOCUMENT_NETWORK_VISUALIZATION.md  settings.local.json
.claude/agents/: tag-agent.md
.claude/skills/: README.md
.github/workflows/: deploy-preview.yaml  deploy_docs.yml
.infio_json_db/: .initial_migration_completed
.infio_json_db/chats/: v2_hi_1760867219006_0411e41d-1a1a-4a60-8006-b85117b00dd0_vault.json
.infio_json_db/workspaces/: v1_vault_1760867219010_3282639e-a2d1-4a34-a4aa-6425a6db7c27.json
.obsidian/: app.json  appearance.json  command-palette.json  community-plugins.json  core-plugins.json  types.json  workspace.json
0 - Inbox/Clippings/: Codex CLI 및 Agents SDK를 사용하여 일관된 워크플로 구축.md
A2A-docs/: mkdocs-ko.yml
A2A-docs/docs-ko/: README.md  community.md  index.md  llms.txt  partners.md  specification.md
ambient-agents/: README.md
ambient-agents/module-1/: README.md
archive/langgraph-notebooks/: 03-LangGraph-Agent.ipynb  04-LangGarph-Agent-With-Memory.ipynb  05-LangGraph-Streaming-Outputs.ipynb  06-LangGraph-Human-in-the-Loop.ipynb  08-LangGraph-State-Customization.ipynb  12-LangGraph-Add-Conversation-Summary.ipynb  15-LangGraph-Streaming-Steps.ipynb  16-LangGraph-Agent-Simulation.ipynb
content/랭그래프/: index.md
docs/: (번역) AI 에이전트를 위한 효과적인 컨텍스트 엔지니어링.md  .pages  Ambient Agents with LangGraph.md  Deep-Agents-From-Scratch.md  Foundation Introduction to LangGraph.md  Home.md  LangGraph 배포 가이드.md  Let the Model Write the Prompt.ko.md  Let the Model Write the Prompt.md  index.md  setup.md  개발 환경 설정.md  환경 설정.md
docs-langgraph/: mkdocs.yml  netlify.toml  package-lock.json  package.json
docs-langgraph/site/: 404.html  index.html  sitemap.xml
docs/100 시작하기/: Ambient Agents with LangGraph.md  Deep Agents From Scratch.md  Streamlit 개발 환경 설정 가이드.md  index.md
docs/200 랭그래프/: LangGraph.md  index.md  랭그래프 배포 가이드.md
docs/300 프롬프트 엔지니어링/: index.md  에이전트를 위한 효과적인 컨텍스트 엔지니어링.md  컨텍스트 엔지니어링의 부상.md  효과적인 AI 에이전트 구축하기.md
docs/900 참고 자료/: AI 에이전트의 시작 - 실무에서 진짜 작동하는 것.md  C.R.A.F.T.E.D. 프롬프트 프레임워크 - AI로 소프트웨어 엔지니어링 작업하기.md  DeepAgents - LangChain으로 고급 주식 조사 에이전트 구축하기.md  LangChain과 LangGraph 1.0 릴리즈 소개.md  MarkItDown - 문서 파일을 Markdown으로 변환하는 도구.md  MarkItDown - 파일을 Markdown으로 변환하는 도구.md  Poetry에서 UV로 - 2025년 Python 패키지 관리자 트렌드 변화.md  ReAct 에이전트 패턴 구현 - AI 에이전트 크래시 코스 Part 10.md  bRAG-langchain - RAG 애플리케이션 구축 가이드.md  index.md  최신 AI 연구 논문 모음.md  학습 자료 모음.md
docs/Graph API/: Overview.md
docs/concepts/: low_level.md
docs/langgraph/: LangGraph 배포 가이드.md  README.md  deploy.sh  mkdocs.yml  netlify.toml  pyproject.toml  requirements.txt
docs/notes/: LangGraph 서브그래프 상태 관리 완벽 가이드.md  Pydantic Field 사용법.md  langgraph-issue-4748-subgraph-state-loss.md  langgraph-subgraph-state-management-guide.md
docs/prompt/: (번역) AI 에이전트를 위한 효과적인 컨텍스트 엔지니어링.md
docs/prompt-engineering/: (번역) AI 에이전트를 위한 효과적인 컨텍스트 엔지니어링.md  index.md
docs/stylesheets/: extra.css
docs/랭그래프/: Add human intervention.md  Human-in-the-loop Overview.md  InjectedState-사용법.md  LangGraph 노드 추가 패턴.md  LangGraph 배포 가이드.md  LangGraph 서브그래프 상태 관리 완벽 가이드.md  LangGraph.md  Pydantic Field 사용법.md  index.md  langchain-tavily.md  랭그래프 배포 가이드.md  멀티 에이전트 구현.md  멀티 에이전트 시스템 구축 가이드.md  멀티 에이전트 시스템.md
docs/시작하기/: Ambient-Agents-with-LangGraph.md  Deep-Agents-From-Scratch.md  Foundation Introduction to LangGraph.md  Foundation-Introduction-to-LangGraph.md  개발 환경 설정.md  개발-환경-설정.md
docs/프롬프트 엔지니어링/: (번역) AI 에이전트를 위한 효과적인 컨텍스트 엔지니어링.md  (번역) 모델이 프롬프트를 작성하게 하라.md  (번역) 컨텍스트 엔지니어링의 부상.md  AI 에이전트를 위한 효과적인 컨텍스트 엔지니어링.md  index.md  컨텍스트 엔지니어링의 부상.md  효과적인 AI 에이전트 구축하기.md
docs/프롬프트-엔지니어링/: 컨텍스트 엔지니어링의 부상.md  효과적인 AI 에이전트 구축하기.md
foundation/: README.md
foundation/module-1/: 2-simple-graph.ipynb  3-chain.ipynb  README.md
langgraph-docs/: mkdocs.yml  requirements.txt
langgraph-foundation/: README.md
langgraph-notebooks/: 02-LangGraph-ChatBot.ipynb  07-LangGraph-Manual-State-Update.ipynb  09-LangGraph-DeleteMessages.ipynb
langgraph-tutorial/: 10-Multi-Agent-SWARM-Agent.ipynb  README.md
module-1/: 1-basics.ipynb  2-simple-graph.ipynb  3-chain.ipynb  4-router.ipynb  6-agent-memory.ipynb  README.md  index.md
module-2/: 2-state-reducers.ipynb  4-trim-filter-messages.ipynb  5-chatbot-summarization.ipynb  README.md
module-3/: 1-streaming-interruption.ipynb  2-breakpoints.ipynb  README.md
module-4/: 1-parallelization.ipynb  3-map-reduce.ipynb  4-research-assistant.ipynb  README.md
module-5/: 1-memory_store.ipynb  2-memoryschema_profile.ipynb  3-memoryschema_collection.ipynb  4-memory_agent.ipynb  README.md
module-6/: 2-connecting.ipynb  3-double-texting.ipynb  4-assistant.ipynb  README.md
projects/: 01-Agent-Simulation.ipynb  01-Github-Code-QA-RAG.ipynb  01-LangGraph-Agent-Simulation.ipynb  02-LangGraph-Prompt-Generation.ipynb  02-Meta-Prompt-Generation.ipynb  03-CRAG.ipynb  03-LangGraph-CRAG.ipynb  04-Self-RAG.ipynb  05-Plan-and-Execute.ipynb  06-Multi-Agent-Collaboration.ipynb  07-Multi-Agent-Supervisor-1.ipynb  07-Multi-Agent-Supervisor-2.ipynb  07-Multi-Agent-Supervisor.ipynb  08-Hierarchial-Agent-Team.ipynb  08-Multi-Agent-Supervisor-1.ipynb  09-SQL-Agent.ipynb  10-Multi-Agent-SWARM-Agent.ipynb  11-Research-Assistant.ipynb  README.md
projects/10-langgraph-qa-rag-agent/studio/: chains.py  graph.py  langgraph.json  main.py  nodes.py  pyproject.toml  rag.py  retrievers.py  states.py
tutorial/: 01-Agent-Simulation.ipynb  02-Meta-Prompt-Generation.ipynb  04-Self-RAG.ipynb  06-SQL-Agent.ipynb  09-Hierarchial-Agent-Team.ipynb  14-Graphiti-Agent.ipynb  README.md
(+8129 files in other folders)
